force-app/main/default/objects/Device_Asset__c/Device_Asset__c.object-meta.xml
<CustomObject>
    <label>Device Asset</label>
    <nameField>
        <label>Device Asset ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>