force-app/main/default/objects/Device_Asset__c/fields/AssetID__c.field-meta.xml
<CustomField>
    <fullName>AssetID__c</fullName>
    <externalId>true</externalId>
    <label>AssetID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>