force-app/main/default/objects/Device_Asset__c/fields/Valid_Support_Contract__c.field-meta.xml
<CustomField>
    <fullName>Valid_Support_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Support Contract</label>
    <type>Checkbox</type>
</CustomField>